Marielle's citations and ET imag

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -151,6 +151,26 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\RZHR6NZ6\\Anderson-Teixeira et al. - 2015 - Size-related scaling of tree form and function in .pdf;C\:\\Users\\Me\\Zotero\\storage\\VNYHXK9G\\Anderson-Teixeira et al. - 2015 - Size-related scaling of tree form and function in .pdf;C\:\\Users\\Me\\Zotero\\storage\\UZT8PGGP\\1365-2435.html}
 }
 
+@article{aragao21stCenturyDroughtrelated2018,
+  title = {21st {{Century}} Drought-Related Fires Counteract the Decline of {{Amazon}} Deforestation Carbon Emissions},
+  author = {Aragão, Luiz E. O. C. and Anderson, Liana O. and Fonseca, Marisa G. and Rosan, Thais M. and Vedovato, Laura B. and Wagner, Fabien H. and Silva, Camila V. J. and Silva Junior, Celso H. L. and Arai, Egidio and Aguiar, Ana P. and Barlow, Jos and Berenguer, Erika and Deeter, Merritt N. and Domingues, Lucas G. and Gatti, Luciana and Gloor, Manuel and Malhi, Yadvinder and Marengo, Jose A. and Miller, John B. and Phillips, Oliver L. and Saatchi, Sassan},
+  date = {2018-02-13},
+  journaltitle = {Nat Commun},
+  volume = {9},
+  number = {1},
+  pages = {536},
+  publisher = {{Nature Publishing Group}},
+  issn = {2041-1723},
+  doi = {10.1038/s41467-017-02771-y},
+  url = {https://www.nature.com/articles/s41467-017-02771-y},
+  urldate = {2021-08-26},
+  abstract = {Tropical carbon emissions are largely derived from direct forest clearing processes. Yet, emissions from drought-induced forest fires are, usually, not included in national-level carbon emission inventories. Here we examine Brazilian Amazon drought impacts on fire incidence and associated forest fire carbon emissions over the period 2003–2015. We show that despite a 76\% decline in deforestation rates over the past 13 years, fire incidence increased by 36\% during the 2015 drought compared to the preceding 12 years. The 2015 drought had the largest ever ratio of active fire counts to deforestation, with active fires occurring over an area of 799,293\,km2. Gross emissions from forest fires (989\,±\,504 Tg CO2 year−1) alone are more than half as great as those from old-growth forest deforestation during drought years. We conclude that carbon emission inventories intended for accounting and developing policies need to take account of substantial forest fire emissions not associated to the deforestation process.},
+  issue = {1},
+  langid = {english},
+  annotation = {Bandiera\_abtest: a Cc\_license\_type: cc\_by Cg\_type: Nature Research Journals Primary\_atype: Research Subject\_term: Carbon cycle;Climate-change mitigation;Environmental impact Subject\_term\_id: carbon-cycle;climate-change-mitigation;environmental-impact},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\EKSUFDK3\\Aragão et al. - 2018 - 21st Century drought-related fires counteract the .pdf;C\:\\Users\\Me\\Zotero\\storage\\UMXYL3RV\\s41467-017-02771-y.html}
+}
+
 @article{arakiVerticalSeasonalVariations2017,
   title = {Vertical and Seasonal Variations in Temperature Responses of Leaf Respiration in a {{Chamaecyparis}} Obtusa Canopy},
   author = {Araki, Masatake G and Gyokusen, Koichiro and Kajimoto, Takuya},
@@ -978,6 +998,35 @@
   keywords = {Climatic gradients,macroecology,precipitation,temperature,tree growth,water availability},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/geb.12171},
   file = {C\:\\Users\\Me\\Zotero\\storage\\TTKQZ6X8\\Bowman et al. - 2014 - A warmer world will reduce tree growth in evergree.pdf}
+}
+
+@article{brandoAbruptIncreasesAmazonian2014,
+  title = {Abrupt Increases in {{Amazonian}} Tree Mortality Due to Drought–Fire Interactions},
+  author = {Brando, Paulo Monteiro and Balch, Jennifer K. and Nepstad, Daniel C. and Morton, Douglas C. and Putz, Francis E. and Coe, Michael T. and Silvério, Divino and Macedo, Marcia N. and Davidson, Eric A. and Nóbrega, Caroline C. and Alencar, Ane and Soares-Filho, Britaldo S.},
+  date = {2014-04-29},
+  journaltitle = {PNAS},
+  volume = {111},
+  number = {17},
+  eprint = {24733937},
+  eprinttype = {pmid},
+  pages = {6347--6352},
+  publisher = {{National Academy of Sciences}},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.1305499111},
+  url = {http://www.pnas.org/content/111/17/6347},
+  urldate = {2021-08-26},
+  abstract = {Interactions between climate and land-use change may drive widespread degradation of Amazonian forests. High-intensity fires associated with extreme weather events could accelerate this degradation by abruptly increasing tree mortality, but this process remains poorly understood. Here we present, to our knowledge, the first field-based evidence of a tipping point in Amazon forests due to altered fire regimes. Based on results of a large-scale, long-term experiment with annual and triennial burn regimes (B1yr and B3yr, respectively) in the Amazon, we found abrupt increases in fire-induced tree mortality (226 and 462\%) during a severe drought event, when fuel loads and air temperatures were substantially higher and relative humidity was lower than long-term averages. This threshold mortality response had a cascading effect, causing sharp declines in canopy cover (23 and 31\%) and aboveground live biomass (12 and 30\%) and favoring widespread invasion by flammable grasses across the forest edge area (80 and 63\%), where fires were most intense (e.g., 220 and 820 kW⋅m−1). During the droughts of 2007 and 2010, regional forest fires burned 12 and 5\% of southeastern Amazon forests, respectively, compared with {$<$}1\% in nondrought years. These results show that a few extreme drought events, coupled with forest fragmentation and anthropogenic ignition sources, are already causing widespread fire-induced tree mortality and forest degradation across southeastern Amazon forests. Future projections of vegetation responses to climate change across drier portions of the Amazon require more than simulation of global climate forcing alone and must also include interactions of extreme weather events, fire, and land-use change.},
+  langid = {english},
+  keywords = {fire mapping,fireline intensity,forest dieback,MODIS,stable states},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\68AR6LRT\\Brando et al. - 2014 - Abrupt increases in Amazonian tree mortality due t.pdf;C\:\\Users\\Me\\Zotero\\storage\\MC8XSFN5\\6347.html}
+}
+
+@article{brandoDroughtsWildfiresForest2019,
+  title = {Droughts, {{Wildfires}}, and {{Forest Carbon Cycling}}: {{A Pantropical Synthesis}} | {{Annual Review}} of {{Earth}} and {{Planetary Sciences}}},
+  author = {Brando, Paulo M.},
+  date = {2019},
+  url = {https://www-annualreviews-org.smithsonian.idm.oclc.org/doi/10.1146/annurev-earth-082517-010235},
+  urldate = {2021-08-26}
 }
 
 @article{brasseurEXTINCTIONRAYONNEMENTDANS1976,
@@ -4850,6 +4899,35 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\IDGUZNJU\\Larbi et al. - 2015 - Canopy light heterogeneity drives leaf anatomical,.pdf}
 }
 
+@online{LaunchIPBESIPCCCoSponsored2020,
+  title = {Launch of {{IPBES}}-{{IPCC Co}}-{{Sponsored Workshop Report}} on {{Biodiversity}} and {{Climate Change}}},
+  date = {2020-02-21},
+  url = {http://ipbes.net/events/launch-ipbes-ipcc-co-sponsored-workshop-report-biodiversity-and-climate-change},
+  urldate = {2021-08-26},
+  langid = {english},
+  organization = {{IPBES secretariat}},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\ZNUZZSTB\\launch-ipbes-ipcc-co-sponsored-workshop-report-biodiversity-and-climate-change.html}
+}
+
+@article{lauranceRainForestFragmentation2006,
+  title = {Rain {{Forest Fragmentation}} and the {{Proliferation}} of {{Successional Trees}}},
+  author = {Laurance, William F. and Nascimento, Henrique E. M. and Laurance, Susan G. and Andrade, Ana C. and Fearnside, Philip M. and Ribeiro, José E. L. and Capretz, Robson L.},
+  date = {2006},
+  journaltitle = {Ecology},
+  volume = {87},
+  number = {2},
+  pages = {469--482},
+  issn = {1939-9170},
+  doi = {10.1890/05-0064},
+  url = {http://esajournals.onlinelibrary.wiley.com/doi/abs/10.1890/05-0064},
+  urldate = {2021-08-26},
+  abstract = {The effects of habitat fragmentation on diverse tropical tree communities are poorly understood. Over a 20-year period we monitored the density of 52 tree species in nine predominantly successional genera (Annona, Bellucia, Cecropia, Croton, Goupia, Jacaranda, Miconia, Pourouma, Vismia) in fragmented and continuous Amazonian forests. We also evaluated the relative importance of soil, topographic, forest dynamic, and landscape variables in explaining the abundance and species composition of successional trees. Data were collected within 66 permanent 1-ha plots within a large (∼1000 km2) experimental landscape, with forest fragments ranging from 1 to 100 ha in area. Prior to forest fragmentation, successional trees were uncommon, typically comprising 2–3\% of all trees (≥10 cm diameter at breast height [1.3 m above the ground surface]) in each plot. Following fragmentation, the density and basal area of successional trees increased rapidly. By 13–17 years after fragmentation, successional trees had tripled in abundance in fragment and edge plots and constituted more than a quarter of all trees in some plots. Fragment age had strong, positive effects on the density and basal area of successional trees, with no indication of a plateau in these variables, suggesting that successional species could become even more abundant in fragments over time. Nonetheless, the 52 species differed greatly in their responses to fragmentation and forest edges. Some disturbance-favoring pioneers (e.g., Cecropia sciadophylla, Vismia guianensis, V. amazonica, V. bemerguii, Miconia cf. crassinervia) increased by {$>$}1000\% in density on edge plots, whereas over a third (19 of 52) of all species remained constant or declined in numbers. Species responses to fragmentation were effectively predicted by their median growth rate in nearby intact forest, suggesting that faster-growing species have a strong advantage in forest fragments. An ordination analysis revealed three main gradients in successional-species composition across our study area. Species gradients were most strongly influenced by the stand-level rate of tree mortality on each plot and by the number of nearby forest edges. Species composition also varied significantly among different cattle ranches, which differed in their surrounding matrices and disturbance histories. These same variables were also the best predictors of total successional-tree abundance and species richness. Successional-tree assemblages in fragment interior plots ({$>$}150 m from edge), which are subjected to fragment area effects but not edge effects, did not differ significantly from those in intact forest, indicating that area effects per se had little influence on successional trees. Soils and topography also had little discernable effect on these species. Collectively, our results indicate that successional-tree species proliferate rapidly in fragmented Amazonian forests, largely as a result of chronically elevated tree mortality near forest edges and possibly an increased seed rain from successional plants growing in nearby degraded habitats. The proliferation of fast-growing successional trees and correlated decline of old-growth trees will have important effects on species composition, forest dynamics, carbon storage, and nutrient cycling in fragmented forests.},
+  langid = {english},
+  keywords = {Amazon,carbon storage,edge effects,floristic composition,forest dynamics,habitat fragmentation,permanent plots,pioneers,tree communities,tropical forest},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1890/05-0064},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\V6HBFPFP\\Laurance et al. - 2006 - Rain Forest Fragmentation and the Proliferation of.pdf;C\:\\Users\\Me\\Zotero\\storage\\V9HQE6P7\\05-0064.html}
+}
+
 @article{lauransFunctionalTraitsTheir2012,
   title = {Functional Traits and Their Plasticity Predict Tropical Trees Regeneration Niche Even among Species with Intermediate Light Requirements},
   author = {Laurans, Marilyne and Martin, Olivier and Nicolini, Eric and Vincent, Gregoire},
@@ -6208,6 +6286,27 @@
   langid = {english},
   keywords = {Canopy,Climate Change,Leaf Temperature,Megathermy,Microclimate,Photosynthetic Optimum,Poikilothermy,Thermoregulation,Vertical Gradient},
   file = {C\:\\Users\\Me\\Zotero\\storage\\JKV8YDZM\\Miller et al. - 2021 - Only sun-lit leaves of the uppermost canopy exceed.pdf;C\:\\Users\\Me\\Zotero\\storage\\ACDRN6ER\\S0168192321000307.html}
+}
+
+@article{millerReducedImpactLogging2011,
+  title = {Reduced Impact Logging Minimally Alters Tropical Rainforest Carbon and Energy Exchange},
+  author = {Miller, Scott D. and Goulden, Michael L. and Hutyra, Lucy R. and Keller, Michael and Saleska, Scott R. and Wofsy, Steven C. and Figueira, Adelaine Michela Silva and da Rocha, Humberto R. and de Camargo, Plinio B.},
+  date = {2011-11-29},
+  journaltitle = {PNAS},
+  volume = {108},
+  number = {48},
+  eprint = {22087005},
+  eprinttype = {pmid},
+  pages = {19431--19435},
+  publisher = {{National Academy of Sciences}},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.1105068108},
+  url = {http://www.pnas.org/content/108/48/19431},
+  urldate = {2021-08-26},
+  abstract = {We used eddy covariance and ecological measurements to investigate the effects of reduced impact logging (RIL) on an old-growth Amazonian forest. Logging caused small decreases in gross primary production, leaf production, and latent heat flux, which were roughly proportional to canopy loss, and increases in heterotrophic respiration, tree mortality, and wood production. The net effect of RIL was transient, and treatment effects were barely discernable after only 1 y. RIL appears to provide a strategy for managing tropical forest that minimizes the potential risks to climate associated with large changes in carbon and water exchange.},
+  langid = {english},
+  keywords = {Amazon,Brazil,land use,micrometeorology},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\75IXTBIW\\Miller et al. - 2011 - Reduced impact logging minimally alters tropical r.pdf;C\:\\Users\\Me\\Zotero\\storage\\JT3HARNY\\19431.html}
 }
 
 @article{missonPartitioningForestCarbon2007,
@@ -7716,6 +7815,18 @@
   langid = {english},
   keywords = {Adaptation; Physiological,daily light integral (DLI),dose-response curve,Dose-Response Relationship; Radiation,functional groups,growth irradiance,Light,meta-analysis,Plant Development,Plants,Quantitative Trait; Heritable,reaction norm,shade tolerance},
   file = {C\:\\Users\\Me\\Zotero\\storage\\CJ6BT2N4\\Poorter et al. - 2019 - A meta-analysis of plant responses to light intens.pdf}
+}
+
+@article{portnerScientificOutcomeIPBESIPCC2021,
+  title = {Scientific Outcome of the {{IPBES}}-{{IPCC}} Co-Sponsored Workshop on Biodiversity and Climate Change},
+  author = {Pörtner, Hans-Otto and Scholes, Robert J. and Agard, John and Archer, Emma and Arneth, Almut and Bai, Xuemei and Barnes, David and Burrows, Michael and Chan, Lena and Cheung, Wai Lung (William) and Diamond, Sarah and Donatti, Camila and Duarte, Carlos and Eisenhauer, Nico and Foden, Wendy and Gasalla, Maria A. and Handa, Collins and Hickler, Thomas and Hoegh-Guldberg, Ove and Ichii, Kazuhito and Jacob, Ute and Insarov, Gregory and Kiessling, Wolfgang and Leadley, Paul and Leemans, Rik and Levin, Lisa and Lim, Michelle and Maharaj, Shobha and Managi, Shunsuke and Marquet, Pablo A. and McElwee, Pamela and Midgley, Guy and Oberdorff, Thierry and Obura, David and Osman Elasha, Balgis and Pandit, Ram and Pascual, Unai and Pires, Aliny P. F. and Popp, Alexander and Reyes-García, Victoria and Sankaran, Mahesh and Settele, Josef and Shin, Yunne-Jai and Sintayehu, Dejene W. and Smith, Peter and Steiner, Nadja and Strassburg, Bernardo and Sukumar, Raman and Trisos, Christopher and Val, Adalberto Luis and Wu, Jianguo and Aldrian, Edvin and Parmesan, Camille and Pichs-Madruga, Ramon and Roberts, Debra C. and Rogers, Alex D. and Díaz, Sandra and Fischer, Markus and Hashimoto, Shizuka and Lavorel, Sandra and Wu, Ning and Ngo, Hien},
+  date = {2021-06-24},
+  doi = {10.5281/zenodo.5101125},
+  url = {https://zenodo.org/record/5101125},
+  urldate = {2021-08-26},
+  abstract = {The Scientific Outcome~was produced by participants in the~first-ever IPCC-IPBES co-sponsored workshop which took place in December 2020.~~ This workshop is placed~in the context of recent international agreements including the Paris Agreement, the Strategic Plan for Biodiversity 2011-2020 and ongoing preparation for the post-2020 global biodiversity framework, the Sendai Framework for Disaster Risk Reduction and the 2030 Agenda for Sustainable Development that converge on solving the dual crises of climate change and biodiversity loss as essential to support human well-being. The Scientific Outcome further develops and substantiates the~conclusions of the~Synopsis,~summarizes the emerging state of knowledge~involving climate change and biodiversity with the objective to~inform decision making and~highlight options for action,~and~to~identify knowledge gaps to be filled~by scientific research.~The~Scientific Outcome~includes seven sections, the references outlining the evidence reviewed within those sections and the report glossary.},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\42M97HWB\\2021_IPCC-IPBES_scientific_outcome_20210612.pdf;C\:\\Users\\Me\\Zotero\\storage\\YDA7CZNV\\Pörtner et al. - 2021 - Scientific outcome of the IPBES-IPCC co-sponsored .pdf}
 }
 
 @article{quevedo-rojasLeafAcclimationStrategies2018,
